--- a/server/py4web/apps/vidjil/templates/my_account/jobs.html
+++ b/server/py4web/apps/vidjil/templates/my_account/jobs.html
@@ -1,4 +1,5 @@
 [[from apps.vidjil.modules import vidjil_utils]]
+[[from apps.vidjil import tasks]]
 
 [[extend 'db_layout.html']]
 
@@ -38,7 +39,7 @@
                     [[ info = tagdecorator.decorate(row.info, 'tag', 'sequence_file', '/my_account/jobs') ]]
                     <td>[[=tagdecorator.sanitize(info)]]</td>
                     <td class="column_150">
-                        [[ if row.status == 'COMPLETED':]]
+                        [[ if row.status == tasks.STATUS_COMPLETED:]]
                             <a href="/?sample_set_id=[[=row.sample_set_id]]&config=[[=row.config_id]]" onclick="event.preventDefault();event.stopPropagation();if( event.which == 2 ) { window.open(this.href); } else { myUrl.loadUrl(db, { 'sample_set_id' : [[=row.sample_set_id]], 'config' :  [[=row.config_id]] }, '[[=row.filename]]' ); }" >
                                 [[=row.config]]
                             </a>
