--- a/server/py4web/apps/vidjil/templates/sample_set/index.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/index.html
@@ -1,6 +1,7 @@
 [[extend 'db_layout.html']]
 [[from apps.vidjil.modules import vidjil_utils]]
 [[from apps.vidjil.modules.permission_enum import PermissionEnum]]
+[[from apps.vidjil import tasks]]
 
 
 <div>
@@ -90,7 +91,7 @@
 
                 <td class="column2"></td>
                 <td class="column_100" style="padding: 2px 5px">
-                    [[ launch_sequence_files = [(int(row.sequence_file.id) for row in query if row.results_file.status in ["FAILED",''])]  ]]
+                    [[ launch_sequence_files = [(int(row.sequence_file.id) for row in query if row.results_file.status in ["tasks.STATUS_FAILED",""])]  ]]
                     [[ if len(launch_sequence_files) > 0 and (config_id > 0 and auth.can_use_config(config_id)): ]]
                          Run all
                     [[pass]]
@@ -113,7 +114,7 @@
                        [[if config_id > 0 and auth.can_use_config(config_id) :]]
                           [[if auth.can_process_sample_set(int(request.query['id'])) and (config_id > 0 and auth.can_use_config(config_id)) :]]
 
-                              [[ launch_sequence_files_unavailable = [ int(row.sequence_file.id) for row in query if row.results_file.status in ["FAILED",''] ] ]]
+                              [[ launch_sequence_files_unavailable = [ int(row.sequence_file.id) for row in query if row.results_file.status in [tasks.STATUS_FAILED,""] ] ]]
 
                               [[ if len(launch_sequence_files_unavailable) > 0: ]]
                                <span class="pointer" 
@@ -163,10 +164,10 @@
                         title="View more information on the pre-process [[=pre_process_list[row.sequence_file.pre_process_id]]]"[[pass]]
                         [[if has_pre_process:]] onclick="db.call('pre_process/info', {'sequence_file_id' :'[[=row.sequence_file.id ]]', 'sample_set_id' : '[[=request.query["id"]]]'} )" [[pass]]
                         >
-                        [[if row.sequence_file.pre_process_flag == "RUN" :]]<i class="icon-spin4" style="animation: spin 2s 1000 linear;
+                        [[if row.sequence_file.pre_process_flag == "tasks.STATUS_RUNNING" :]]<i class="icon-spin4" style="animation: spin 2s 1000 linear;
     display: inline-block;" title="running pre_processs"></i>[[pass]] 
-                        [[if row.sequence_file.pre_process_flag == "WAIT" :]][queued][[pass]] 
-                        [[if row.sequence_file.pre_process_flag == "FAILED" :]][failed] <span class="button" onclick="db.call('file/restart_pre_process', {sequence_file_id: [[=row.sequence_file.id]]})">try again</span>[[pass]]
+                        [[if row.sequence_file.pre_process_flag == "tasks.STATUS_WAITING" :]][queued][[pass]] 
+                        [[if row.sequence_file.pre_process_flag == "tasks.STATUS_FAILED" :]][failed] <span class="button" onclick="db.call('file/restart_pre_process', {sequence_file_id: [[=row.sequence_file.id]]})">try again</span>[[pass]]
                         [[ if has_pre_process and row.sequence_file.pre_process_flag is None and row.sequence_file.data_file2 is None: ]]<span title="All the files have not been properly received yet. It this persists, please edit the sample to reupload them.">[waiting file]</span>[[pass]]
                         [[if row.sequence_file.pre_process_id != None :]] [[=pre_process_list[row.sequence_file.pre_process_id]]] [[pass]]
                      </td>
@@ -208,7 +209,7 @@
                                type="application/octet-stream"><i class="icon-down" title="Download result file"></i></a>
                         [[pass]]
                      </td>
-                     <td [[if status in ["COMPLETED", "FAILED"]:]] class="pointer" onclick="db.call('results_file/output', { 'results_file_id' : '[[=row.results_file.id]]' }) " [[else:]] class="inactive" [[pass]]><i class="icon-docs" title="See the output files"></i></td>
+                     <td [[if status in [tasks.STATUS_COMPLETED, tasks.STATUS_FAILED]:]] class="pointer" onclick="db.call('results_file/output', { 'results_file_id' : '[[=row.results_file.id]]' }) " [[else:]] class="inactive" [[pass]]><i class="icon-docs" title="See the output files"></i></td>
                     [[if can_modify and auth.can_process_sample_set(int(request.query['id'])):]]
                      <td id="delete_process_[[=row.sequence_file.id]]" class="pointer" onclick="db.call('results_file/confirm', {'results_file_id' :'[[=row.results_file.id]]', 'sample_set_id': '[[=request.query["id"]]]'})" >  <i class="icon-erase" title="delete process"></i> </td>
                     [[else:]]
@@ -218,7 +219,7 @@
                      <td id="status_[[=row.sequence_file.id]]_[[=config_id]]"></td><td></td><td></td><td></td>
                    [[pass]]
                    <td>
-                   [[if row.sequence_file.data_file != None and ( row.results_file.id != None or ( status not in ["RUNNING", "QUEUED", "ASSIGNED"]) ) and (not has_pre_process or (row.sequence_file.pre_process_flag != None and row.sequence_file.pre_process_flag != "FAILED")) :]]
+                   [[if row.sequence_file.data_file != None and ( row.results_file.id != None or ( status not in [tasks.STATUS_RUNNING, tasks.STATUS_QUEUED]) ) and (not has_pre_process or (row.sequence_file.pre_process_flag != None and row.sequence_file.pre_process_flag != tasks.STATUS_FAILED)) :]]
                        [[if auth.can_process_sample_set(int(request.query['id'])) and (config_id > 0 and auth.can_use_config(config_id)) :]]
                            <span class="pointer" id="launch_[[=row.sequence_file.id]]_[[=config_id]]"  onclick="db.call('default/run_request', { 'sequence_file_id' : '[[=row.sequence_file.id]]', 'sample_set_id' : [[=request.query["id"]]], 'config_id' : [[=config_id]] } )"><i class="icon-cog-2" title="Run a process with the selected configuration for this file"></i></span>
                        [[pass]]
