--- a/server/py4web/apps/vidjil/templates/sample_set/index.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/index.html
@@ -99,16 +99,14 @@
                 <td class="column5"></td>
                 <td class="column5"></td>
                 <td class="column5" id="footer_run_icon_all">
-                       [[if config_id > 0 and auth.can_use_config(config_id) :]]
-                       [[if auth.can_process_sample_set(int(request.query['id'])) and (config_id > 0 and auth.can_use_config(config_id)) :]]
-                              [[ launch_sequence_files_all = [ int(row.sequence_file.id) for row in query ] ]]
-                              <span class="pointer devel-mode" 
-                                id="launch_all_samples_[[=config_id]]"
-                               onclick="db.call('default/run_all_request', {'sequence_file_ids' : [[=launch_sequence_files_all]], 'sample_set_id': [[=request.query["id"]]], 'config_id' : [[=config_id]] } ) "
-                              ><i class="icon-cog-2" title="Run the selected configuration for all samples">
-                               </i></span>
-                           [[pass]]
-                      [[pass]]
+                        [[if auth.can_process_sample_set(int(request.query['id'])) and (config_id > 0 and auth.can_use_config(config_id)) :]]
+                            [[ launch_sequence_files_all = [ int(row.sequence_file.id) for row in query ] ]]
+                            <span class="pointer devel-mode" 
+                            id="launch_all_samples_[[=config_id]]"
+                            onclick="db.call('default/run_all_request', {'sequence_file_ids' : [[=launch_sequence_files_all]], 'sample_set_id': [[=request.query["id"]]], 'config_id' : [[=config_id]] } ) "
+                            ><i class="icon-cog-2" title="Run the selected configuration for all samples">
+                            </i></span>
+                        [[pass]]
                 </td>
                 <td class="column5" id="footer_run_icon">
                        [[if config_id > 0 and auth.can_use_config(config_id) :]]
@@ -219,7 +217,7 @@
                      <td id="status_[[=row.sequence_file.id]]_[[=config_id]]"></td><td></td><td></td><td></td>
                    [[pass]]
                    <td>
-                   [[if row.sequence_file.data_file != None and ( row.results_file.id != None or ( status not in [tasks.STATUS_RUNNING, tasks.STATUS_QUEUED]) ) and (not has_pre_process or (row.sequence_file.pre_process_flag != None and row.sequence_file.pre_process_flag != tasks.STATUS_FAILED)) :]]
+                   [[if row.sequence_file.data_file != None and (status not in [tasks.STATUS_RUNNING, tasks.STATUS_QUEUED, tasks.STATUS_QUEUED, tasks.STATUS_WAITING]) and (not has_pre_process or (row.sequence_file.pre_process_flag != None and row.sequence_file.pre_process_flag != tasks.STATUS_FAILED)) :]]
                        [[if auth.can_process_sample_set(int(request.query['id'])) and (config_id > 0 and auth.can_use_config(config_id)) :]]
                            <span class="pointer" id="launch_[[=row.sequence_file.id]]_[[=config_id]]"  onclick="db.call('default/run_request', { 'sequence_file_id' : '[[=row.sequence_file.id]]', 'sample_set_id' : [[=request.query["id"]]], 'config_id' : [[=config_id]] } )"><i class="icon-cog-2" title="Run a process with the selected configuration for this file"></i></span>
                        [[pass]]
