--- a/server/py4web/apps/vidjil/templates/results_file/output.html
+++ b/server/py4web/apps/vidjil/templates/results_file/output.html
@@ -15,7 +15,7 @@
         </thead>
        [[for file in files :]]
            <tr>
-               <td><a href=[[=URL('results_file', 'download', scheme='https', vars=dict(results_file_id=results_file_id, filename=file['filename']))]]> [[=file['filename']]] </a></td>
+               <td><a href="DB_ADDRESS[[=URL('results_file', 'download', vars=dict(results_file_id=results_file_id, filename=file['filename']), use_appname=False)]]"> [[=file['filename']]] </a></td>
                <td>[[=file['size']]]</td>
             </tr>
         [[pass]]
