--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -1695,6 +1695,8 @@ h3 .uid {
     position: relative;
 }
 
+#db_table_container.border_columns td + td { border-left:1px solid  @border; }
+
 #db_fixed_header {
     position: absolute;
     top: 0px;
