--- a/server/py4web/apps/vidjil/templates/sample_set/multi_sample_stats.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/multi_sample_stats.html
@@ -16,45 +16,49 @@
 <br>
 
 <div id="db_table_container" class="border_columns">
-    <table class="db_table" id="table">
-        <thead>
-	    <tr>
-            [[ for name, header in data['headers'].items(): ]]
-                <th class="content [[=name]]" [[if header.column_size != 0:]] style="width: [[=header.column_size]]px" [[pass]]>
-                    [[=header.display_name]]
-                </th>
-            [[ pass ]]
-            <th class="column_25"></th>
-        </tr>
-        </thead>
-        <tbody>
-            [[ for pos in range(len(data['results'])): ]]
-                [[res=data['results'][pos]]]
-                [[row=permitted_results[pos]]]
+        
+    <div id="db_table_container_x_scroll">
+        <table class="db_table" id="table">
+            <thead>
                 <tr>
                     [[ for name, header in data['headers'].items(): ]]
-                        <td class="[[=name]]">
-                            <span class="content [[=header.display_name]]">[[=res[name]]]</span>
-                        </td>
+                        <th class="content [[=name]]" [[if header.column_size != 0:]] style="width: [[=header.column_size]]px" [[pass]]>
+                            [[=header.display_name]]
+                        </th>
                     [[ pass ]]
-                    <td class="column_25">
-                        <a id="open_sample_result_[[=row.sample_set_membership.sequence_file_id]]" class="button" type="text/html"
-                           href="[[=http_origin]]?custom=[[=row.results_file.id]]&sample_set_id=[[=row.sample_set_membership.sample_set_id]]&config=[[=row.results_file.config_id]]"
-                           onclick= "event.preventDefault();
-                                     if ( event.which == 2 ) { window.open(this.href); }
-                                     else { myUrl.loadCustomUrl(db, {'custom': '[[=row.results_file.id]]', 'sample_set_id' : [[=row.sample_set_membership.sample_set_id]], 'config' : [[=row.results_file.config_id]] });}">
-                            <i class="icon-forward" title="open this sample results in client"></i>
-                        </a>
-                    </td>
+                    <th class="column_20"></th>
                 </tr>
-            [[ pass ]]
-        </tbody>
-    </table>
-    <table class="db_table" id="db_fixed_header"></table>
+            </thead>
+            <tbody>
+                [[ for pos in range(len(data['results'])): ]]
+                    [[res=data['results'][pos]]]
+                    [[row=permitted_results[pos]]]
+                    <tr>
+                        [[ for name, header in data['headers'].items(): ]]
+                            <td class="[[=name]]">
+                                <span class="content [[=header.display_name]]">[[=res[name]]]</span>
+                            </td>
+                        [[ pass ]]
+                        <td class="column_20">
+                            <a id="open_sample_result_[[=row.sample_set_membership.sequence_file_id]]" class="button" type="text/html"
+                            href="[[=http_origin]]?custom=[[=row.results_file.id]]&sample_set_id=[[=row.sample_set_membership.sample_set_id]]&config=[[=row.results_file.config_id]]"
+                            onclick= "event.preventDefault();
+                                        if ( event.which == 2 ) { window.open(this.href); }
+                                        else { myUrl.loadCustomUrl(db, {'custom': '[[=row.results_file.id]]', 'sample_set_id' : [[=row.sample_set_membership.sample_set_id]], 'config' : [[=row.results_file.config_id]] });}">
+                                <i class="icon-forward" title="open this sample results in client"></i>
+                            </a>
+                        </td>
+                    </tr>
+                [[ pass ]]
+            </tbody>
+        </table>
+        <table class="db_table" id="db_fixed_header"></table>
+        <br>
+    </div>
 
-    <br>
 
-    <div> Download table in<a class="button" id="download_statsQC" onclick='m.exportStatsQC("[[=data_raw]]")'>TSV format</a>
+    <div>
+        Download table in<a class="button" id="download_statsQC" onclick='m.exportStatsQC("[[=data_raw]]")'>TSV format</a>
     </div>
 
 </div>
