--- a/browser/css/svg.css
+++ b/browser/css/svg.css
@@ -2223,6 +2223,18 @@ form .form_label {
   box-shadow: inset 0 1px 1px rgba(255, 255, 255, 0.3), inset 0 -1px 1px rgba(0, 0, 0, 0.4);
   min-width: 0.2%;
 }
+.bar_chart_zoom {
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+}
+.bar_chart_zoom:hover {
+  -webkit-transform: scale(2);
+  transform: scale(2);
+  background-color: #FFFFFF;
+  cursor: pointer;
+}
 .stats_locus {
   margin: 2px;
 }
