Tooltips in column titles

--- a/server/py4web/apps/vidjil/templates/sample_set/multi_sample_stats.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/multi_sample_stats.html
@@ -34,6 +34,7 @@
           [[ for name, header in data['headers'].items(): ]]
             <th
                 class="content [[=name]]"
+                title="[[=header.display_tooltip]]"
                 [[if header.column_size != 0:]]
                     style="width: [[=header.column_size]]px"
                 [[pass]]
