Result and QC buttons close to each other

--- a/browser/css/vidjil.less
+++ b/browser/css/vidjil.less
@@ -1078,7 +1078,8 @@ div.button {
     margin-right: -27px;
 }
 
-.button2 {
+.button2,
+.button2_next {
     border: solid;
     border-width: 1px;
     padding: 3px;
@@ -1090,6 +1091,10 @@ div.button {
     text-align: center;
     padding-left: 10px;
     padding-right: 10px;
+}
+
+.button2_next {
+  margin-left: -8px;
 }
 
 .clipboard-button {
