--- a/browser/css/light.css
+++ b/browser/css/light.css
@@ -1234,7 +1234,8 @@ div.button {
   float: left;
   margin-right: -27px;
 }
-.button2 {
+.button2,
+.button2_next {
   border: solid;
   border-width: 1px;
   padding: 3px;
@@ -1246,6 +1247,9 @@ div.button {
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
+}
+.button2_next {
+  margin-left: -8px;
 }
 .clipboard-button {
   margin-left: -5px;
