--- a/server/py4web/apps/vidjil/templates/sample_set/custom.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/custom.html
@@ -93,7 +93,7 @@
                          [[=row.sequence_file.filename]]
                     </td>
                     <td onclick='reverseSampleCheckboxChecked([[=row.results_file.id]], [[=config_samples]])'> [[=row.sequence_file.sampling_date]] </td>
-                    <td onclick='reverseSampleCheckboxChecked([[=row.results_file.id]]), [[=config_samples]]'> [[=tag_decorator.sanitize(tag_decorator.decorate(row.sequence_file.info, 'tag', 'sequence_file', '/sample_set/custom'))]] </td>
+                    <td onclick='reverseSampleCheckboxChecked([[=row.results_file.id]]), [[=config_samples]]'> [[=tag_decorator.sanitize(tag_decorator.decorate(row.sequence_file.info, 'tag', 'sequence_file', '/sample_set/custom?id=' + request.query['id']))]] </td>
                     <td onclick='reverseSampleCheckboxChecked([[=row.results_file.id]], [[=config_samples]])'> [[=row.sequence_file.pcr]] </td>
                     <td onclick='reverseSampleCheckboxChecked([[=row.results_file.id]], [[=config_samples]])' [[if row.sequence_file.data_file == None :]] [[=XML("class='inactive' title='file is missing' ")]] [[pass]] >
                          [[=vidjil_utils.format_size(row.sequence_file.size_file)]] </td>
